--- a/port.aliz/StarterCode/vue/index.html
+++ b/port.aliz/StarterCode/vue/index.html
@@ -11,7 +11,7 @@
     <title>Capstone Title</title>
     <script type="module" src="/src/main.js"></script>
   </head>
-  <body>
+  <body style="background: url('/src/img/background.jpg') center/cover no-repeat fixed;">
     <noscript>
       <strong>We're sorry but this application doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
