BackPack calculator rewised

--- a/Backpack_calculator/vue/index.html
+++ b/Backpack_calculator/vue/index.html
@@ -22,12 +22,11 @@
 
 <style>
   body{
-    font-family: "Rockwell Extra Bold";
-    font-size: 120%;
+    background-image: url("/src/img/background4.jpg"); background-attachment: fixed;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: white;
-
+    /* height: 100vh; */
   }
-  html {
-  scroll-behavior: smooth;
-}
 </style>
